Release CMTK-1.7.1:



Release CMTK-1.7.0 (2011-04-18):

(r3158) Fixed: allow OpenMP to be disabled by initial CMake cache file, which
    is necessary on MacOS to allow automated release building.
(r3151) Added: two-level command line help; "--help" now prints only basic
    options, whereas "--help-all" prints all options including those marked as
    "advanced." this should make it easier for new users to get a quick
    overview of essential functions.
(r3120) Fixed: Nrrd library was not properly splitting file paths containing
    Windows-style separators ('\' rather than '/').
(r3118) Improved: bundled NrrdIO library was updated to 1.11.0 from 1.9.0.
(r3114) Fixed: CMTK now compiles with OpenMP support using VisualStudio
    compilers. All OpenMP parallel loops are now using signed, rather than
    unsigned, loop variables, thus complying with older (pre-3) versions of
    the OpenMP standard.
(r3079) Fixed: reading of uncompressed BioRad (and potentially other format)
    files was broken (patch by Greg Jefferis).
(r3062) Fixed: problem with directory creation due to difference path
    separator characters for Windows vs. POSIX.
(r3059) Fixed: broken thread semaphores on Windows due to incorrect
    conditional compilation. (This bug was introduced in r1661.)
(r3031) Fixed: problem with instantiation of static smart pointer "NULL"
    object led to crashes on MacOS-X platform. This has been fixed.
(r3031) Fixed: linking errors when building shared libraries on MacOS, caused
    by missing library dependencies.
(r3003) Improved: CMTK now employs a toolkit-wide, centralized, fine-grain
    framework for diagnostic outputs of user-defined detail level. Every
    command line tool supports the new "--verbose-level" option; output
    previously generated using the deprecated "--verbose" option is at level
    "1" and can thus be enabled by "--verbose-level 1".
(r2974) Added: initial support for Grand Central Dispatch, including GCD-based