@@ -118,6 +118,9 @@ public:
   /// Downsampling and pixel-averaging constructor function.
   virtual DataGrid* GetDownsampledAndAveraged( const int (&downsample)[3] ) const;
 
+  /// Downsampling without averaging constructor function.
+  virtual DataGrid* GetDownsampled( const int (&downsample)[3] ) const;
+
   /** Reorientation constructor function.
    *\param newOrientation Three letter orientation code that specifies the anatomically-based
    * orientation of the reoriented volume. Each letter can be one of the following: R, L, A, 
