@@ -1,0 +1,14 @@
+NRRD0004
+# Complete NRRD file format specification at:
+# http://teem.sourceforge.net/nrrd/format.html
+type: unsigned char
+dimension: 3
+space: right-anterior-superior
+sizes: 32 64 3
+space directions: (-0.9375,0,0) (0,0.9375,0) (0,0,3)
+kinds: domain domain domain
+labels: "x" "y" "z"
+encoding: gzip
+space units: "mm" "mm" "mm"
+space origin: (-90.468999999999994,-119.53100000000001,-3)
+data file: downsample.raw.gz
